--- a/app/views/jobseekers/job_applications/review.html.slim
+++ b/app/views/jobseekers/job_applications/review.html.slim
@@ -56,7 +56,7 @@
   - if current_jobseeker.job_applications.not_draft.none?
     .govuk-grid-column-one-third
       = render StepsComponent.new title: "Application Steps", classes: "govuk-!-margin-top-6" do |component|
-        - steps = %w[personal_details professional_status employment_history personal_statement references equal_opportunities ask_for_support declarations]
+        - steps = %w[personal_details professional_status qualifications employment_history personal_statement references equal_opportunities ask_for_support declarations]
         - steps.each do |step|
           - component.step(label: t("jobseekers.job_applications.build.#{step}.step_title"), current: false, completed: step.in?(job_application.completed_steps))
         - component.step(label: t("jobseekers.job_applications.review.heading"), current: action_name == "review", completed: false)
