--- a/app/views/jobseekers/job_applications/show.html.slim
+++ b/app/views/jobseekers/job_applications/show.html.slim
@@ -38,6 +38,7 @@
     ol.app-task-list
       li = render "jobseekers/job_applications/review/personal_details", allow_edit: false
       li = render "jobseekers/job_applications/review/professional_status", allow_edit: false
+      li = render "jobseekers/job_applications/review/qualifications", allow_edit: false
       li = render "jobseekers/job_applications/review/employment_history", allow_edit: false
       li = render "jobseekers/job_applications/review/personal_statement", allow_edit: false
       li = render "jobseekers/job_applications/review/references", allow_edit: false
